- modified IFDSReachingDefinitions with initial seeds so that it would work with Android - customized ant build file for my projects